client/src/index.scss
@import-normalize;
@import './styles/_colors.scss';

body {
  background-color: $bg;
  color: $color;
  font-family: 'Inter', Helvetica, Arial, sans-serif;
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

h1, h2, h3 {
  line-height: 1.2;
  margin-top: 0;
}

.text-center {
  text-align: center;
}

body * {
  box-sizing: border-box;
}

